Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>SpeakersJS by speakersjs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -18,13 +17,42 @@
 
     <section class="main-content">
       <h2>
-<a id="organization" class="anchor" href="#organization" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organization</h2>
+<a id="mission" class="anchor" href="#mission" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mission</h2>
 
-<p>We'll open a repository for each conference or meetup group. That should help speakers connect with the communities they want to address.</p>
+<h3>
+<a id="to-help-more-people-deliver-better-talks-about-javascript-by-connecting-speakers-and-prospective-speakers-with-mentors-and-members-of-the-community-to-ideate-and-collaborate" class="anchor" href="#to-help-more-people-deliver-better-talks-about-javascript-by-connecting-speakers-and-prospective-speakers-with-mentors-and-members-of-the-community-to-ideate-and-collaborate" aria-hidden="true"><span class="octicon octicon-link"></span></a>To help more people deliver better talks about Javascript by connecting speakers and prospective speakers with mentors and members of the community to ideate and collaborate.</h3>
+
+<h2>
+<a id="communities" class="anchor" href="#communities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Communities</h2>
 
 <h3>
 <a id="nationjs-2015" class="anchor" href="#nationjs-2015" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/speakersjs/nationjs-2015">NationJS 2015</a>
 </h3>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<h3>
+<a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizers</h3>
+
+<p>To add your community, please open a <a href="https://github.com/speakersjs/speakersjs.github.io/pulls">pull request</a>.</p>
+
+<h3>
+<a id="speakers-and-prospective-speakers" class="anchor" href="#speakers-and-prospective-speakers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Speakers and Prospective Speakers</h3>
+
+<p>To connect with your community, open an issue in your community's repository. Make your issue title clear and your issue description full of all the information you can think of to help your community help you.</p>
+
+<p>Examples:</p>
+
+<ul>
+<li>If you're looking for help choosing a topic, you could open an issue with a few topic ideas you're considering.</li>
+<li>If you're looking for help responding to a call for proposals, you could post a draft of your response and ask for feedback.</li>
+<li>If you're looking for help finishing a talk, you could open an issue with a link to an outline or Google doc with what you've got so far.</li>
+<li>If you're looking for feedback on a finished talk before you deliver it, you could open an issue with a link to a webcast recording of your presentation.</li>
+</ul>
+
+<h3>
+<a id="mentors-and-community-members" class="anchor" href="#mentors-and-community-members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mentors and Community Members</h3>
 
       <footer class="site-footer">
 
