Add info for mentors and community members

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
 
 <h3>
 <a id="mentors-and-community-members" class="anchor" href="#mentors-and-community-members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mentors and Community Members</h3>
+<p>To help your community have awesome talks from a diverse set of speakers, jump into your community's repository and give some feedback.</p>
+
+<p>No matter how you contribute, remember: be respectful and kind. :)</p>
+
+<p>Examples:</p>
+
+<ul>
+<li>When speakers ask for help choosing a topic, give honest, constructive feedback about which suggested topics you like. Give reasons!</li>
+<li>If you have experience submitting responses to a call for proposals, help others who are seeking help doing the same.</li>
+<li>When speakers are looking for help finishing a talk, share your knowledge or identify questions you've always had about the topic they're speaking about.</li>
+<li>When speakers are looking for feedback on a finished talk, watch it. Think about whether the core message is clear, and whether the talk is focused or needs to be tightened up.</li>
+</ul>
 
       <footer class="site-footer">
 
