--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>SpeakersJS by speakersjs</title>
+    <title>SpeakersJS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,15 +12,21 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">SpeakersJS</h1>
-      <h2 class="project-tagline">A place for speakers, prospective speakers, mentors, and members of the community to ideate and collaborate on Javascript talks</h2>
+      <h2 class="project-tagline">speakers, prospective speakers, mentors, & community members collaborating on Javascript talks</h2>
     </section>
 
     <section class="main-content">
       <h2>
 <a id="mission" class="anchor" href="#mission" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mission</h2>
 
-<h3>
-<a id="to-help-more-people-deliver-better-talks-about-javascript-by-connecting-speakers-and-prospective-speakers-with-mentors-and-members-of-the-community-to-ideate-and-collaborate" class="anchor" href="#to-help-more-people-deliver-better-talks-about-javascript-by-connecting-speakers-and-prospective-speakers-with-mentors-and-members-of-the-community-to-ideate-and-collaborate" aria-hidden="true"><span class="octicon octicon-link"></span></a>To help more people deliver better talks about Javascript by connecting speakers and prospective speakers with mentors and members of the community to ideate and collaborate.</h3>
+<div class="well">
+<p>By connecting speakers and prospective speakers with mentors and members of the community to ideate and collaborate, we hope to:</p>
+<ul>
+  <li>Help people deliver better talks about Javascript</li>
+  <li>Enable a more diverse group of people to become speakers</li>
+  <li>Build stronger communities</li>
+</ul>
+</div>
 
 <h2>
 <a id="communities" class="anchor" href="#communities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Communities</h2>
@@ -37,10 +43,14 @@
 
 <p>To add your community, please open a <a href="https://github.com/speakersjs/speakersjs.github.io/pulls">pull request</a>.</p>
 
+<p>We'll add your community to this page and create a new repository for your organization under the <a href="https://github.com/speakersjs">speakersjs organization</a>. You will be given admin access to that new repository.</p>
+
 <h3>
 <a id="speakers-and-prospective-speakers" class="anchor" href="#speakers-and-prospective-speakers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Speakers and Prospective Speakers</h3>
 
-<p>To connect with your community, open an issue in your community's repository. Make your issue title clear and your issue description full of all the information you can think of to help your community help you.</p>
+<p>To connect with your community, open an issue in your community's repository.</p>
+
+<p>Make your issue title clear, and include in your issue description all the information you can think of to help your community help you.</p>
 
 <p>Examples:</p>
 
@@ -51,9 +61,14 @@
 <li>If you're looking for feedback on a finished talk before you deliver it, you could open an issue with a link to a webcast recording of your presentation.</li>
 </ul>
 
+<p>Also, feel free to check out other communities. Maybe you can find some ideas or help other speakers!</p>
+
 <h3>
 <a id="mentors-and-community-members" class="anchor" href="#mentors-and-community-members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mentors and Community Members</h3>
+
 <p>To help your community have awesome talks from a diverse set of speakers, jump into your community's repository and give some feedback.</p>
+
+<p>Also, feel free to contribute to other communities!</p>
 
 <p>No matter how you contribute, remember: be respectful and kind. :)</p>
 
