--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
 <a id="communities" class="anchor" href="#communities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Communities</h2>
 
 <h3>
-<a id="nationjs-2015" class="anchor" href="#nationjs-2015" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/speakersjs/nationjs-2015">NationJS 2015</a>
+<a id="nationjs-2015" class="anchor" href="#nationjs-2015" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/speakersjs/nationjs-2015/issues">NationJS 2015</a>
+</h3>
+
+<h3>
+<a id="node-dc" class="anchor" href="#node-dc" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://github.com/speakersjs/node-dc/issues">NodeDC Meetup Group</a>
 </h3>
 
 <h2>
